# ffreis-python-onnx-model

./: .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  Makefile  README.md  coverage.xml  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: api-grpc-smoke.yml  build-all.yml  code-quality.yml  code-review.yml  commit-checks.yml  coverage.yml  deepsource.yml  docker-build.yml  e2e.yml  examples.yml  grpc-sync.yml  grype.yml  hypothesis-integration.yml  integration.yml  lint.yml  trivy.yml
app/: Makefile  lib.py  main.py  requirements.txt
container/: Dockerfile.base-builder  Dockerfile.builder  Dockerfile.example-base  Dockerfile.example-logistic-regression  Dockerfile.example-neural-network  Dockerfile.example-random-forest  Dockerfile.runner  Dockerfile.services
examples/: build_pytorch_and_tensorflow_smoke_models.py  common.py  train_and_serve_logistic_regression.py  train_and_serve_neural_network.py  train_and_serve_random_forest.py
scripts/: entrypoint.sh
src/: application.py  base_adapter.py  config.py  gunicorn_configuration.py  input_output.py  onnx_adapter.py  parsed_types.py  serving.py  telemetry.py  training.py
src/onnx_model_serving/: __init__.py  lib.py
src/onnx_model_serving/grpc/: server.py
tests/: conftest.py
tests/e2e_tests/: test_cli_e2e.py  test_live_server_inference.py
tests/integration_tests/: test_grpc_parity.py  test_main_integration.py  test_real_inference_pipeline.py
tests/unit_tests/: test_application.py  test_base_adapter.py  test_grpc_server.py  test_gunicorn_configuration.py  test_lib.py  test_telemetry.py
tests/unit_tests/model_serving/: test_application.py  test_base_adapter.py  test_gunicorn_configuration.py  test_input_output.py  test_onnx_adapter.py  test_serving.py  test_telemetry.py  test_training.py
tests/unit_tests/onnx_model_serving/: test_lib.py
tmp/examples/logistic_regression/: model.onnx
tmp/examples/neural_network/: model.onnx
tmp/examples/random_forest/: model.onnx
