[project]
name = "onnx-model-serving"
version = "0.1.0"
description = "Python ONNX model application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=2.1.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_model_serving"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -ra --import-mode=importlib"
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests",
    "integration: tests spanning multiple modules/files",
    "e2e: end-to-end tests using public entrypoints",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
